[package]
name = "cosh"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc_version_runtime = "0.2.1"
guess_host_triple = "0.1.3"
whoami = "1.2.1"
yansi = "0.5.0"
clearscreen = "1.0.9"
reedline = "0.2.0"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.5"