[package]
name = "cosh"
version = "1.0.0"
edition = "2021"

[dependencies]
rustc_version_runtime = "0.2.1"
guess_host_triple = "0.1.3"
whoami = "1.2.1"
yansi = "0.5.0"
clearscreen = "1.0.9"
reedline = "0.2.0"
toml = "0.5.8"
dirs = "4.0.0"
serde = "1.0.136"
libc = "0.2.116"
directories = "4.0.1"
is_executable = "1.0.1"
nu-ansi-term = "0.36.0"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.5"
winapi = { version = "0.3.9", features = ["winuser", "handleapi", "processthreadsapi", "securitybaseapi"] }

[target.'cfg(unix)'.dependencies]
nix = "0.23.1"